Sync with 26.1+
Sync with 26.2

Translated using Weblate (Chinese (Simplified Han script))

Currently translated at 100.0% (1176 of 1176 strings)

Co-authored-by: 金合欢酱 <1426540823@qq.com>
Translate-URL: https://translate.sakuraryoko.com/projects/litematica/main/zh_Hans/
Translation: Litematica/26.2

Sync network protocol changes including Data Tag Compression packets & Unregister / only works while Protocol enabled.  This will greatly improve's Servux Pasting upload speed; and transition to the Servux Task Scheduler for Servux Paste.
- Transition Litematic Data Holders to fully Data Tag compliant so that the Data has to be converted less often for transmission / compression.

protocol fixes
-- WIP Servux Task Info Hud Feedback / Task Requests

add: InfoHudSync, Task Fill / Delete to Servux
fix loading Sponge / Vanilla Structure NBT

Translated using Weblate (Korean)

Currently translated at 100.0% (1177 of 1177 strings)

Translated using Weblate (Literary Chinese)

Currently translated at 95.5% (1125 of 1177 strings)

Translated using Weblate (Italian)

Currently translated at 80.6% (949 of 1177 strings)

Translated using Weblate (Chinese (Traditional Han script))

Currently translated at 92.7% (1092 of 1177 strings)

Translated using Weblate (French)

Currently translated at 75.7% (891 of 1177 strings)

Translated using Weblate (Korean)

Currently translated at 99.9% (1176 of 1177 strings)

Translated using Weblate (Japanese)

Currently translated at 80.6% (949 of 1177 strings)

Translated using Weblate (Swedish)

Currently translated at 94.8% (1116 of 1177 strings)

Translated using Weblate (Turkish)

Currently translated at 87.5% (1031 of 1177 strings)

Translated using Weblate (Spanish)

Currently translated at 96.4% (1135 of 1177 strings)

Translated using Weblate (Ukrainian)

Currently translated at 90.9% (1070 of 1177 strings)

Translated using Weblate (Chinese (Simplified Han script))

Currently translated at 99.9% (1176 of 1177 strings)

Translated using We