@@ -189,7 +189,7 @@ public abstract class TaskProcessChunkMultiPhase extends TaskProcessChunkBase
         {
             this.sortChunkList();
 
-            ChunkPos pos = this.pendingChunks.get(0);
+            ChunkPos pos = this.pendingChunks.getFirst();
 
             if (this.canProcessChunk(pos))
             {
@@ -214,7 +214,7 @@ public abstract class TaskProcessChunkMultiPhase extends TaskProcessChunkBase
 
         if (list.isEmpty() == false)
         {
-            this.currentBox = list.get(0);
+            this.currentBox = list.getFirst();
             this.onStartNextBox(this.currentBox);
         }
         else
